# stale

arabicalphabetchart/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
arabicalphabetchart/pages/: _app.tsx  _document.tsx  about.tsx  index.tsx
arabicalphabetchart/public/: manifest.json
arabicalphabetchart/src/: Header.tsx  gtm.tsx  styles.css
core/: README.md  package-lock.json  package.json
core/pages/: about.tsx  index.tsx
elixir/tecto/: .gitignore  .iex.exs  README.md  mix.exs  wow.exs
enframe/: README.md  heroku-reset.sh  package.json
enframe/srcapp/: .gitlab-ci.yml
enframe/srcbin/: enframe.ts  enframeConfig.ts  fileMaker.ts  herokuMaker.ts
exgames/: README.md  mix.exs
exgames/lib/: application.ex  exgames.ex  run.exs  set.ex
exgames/test/: exgames_test.exs  set_test.exs
genetic/: mix.exs
genetic/lib/: genetic.ex
genetic/scripts/: cargo.exs  codebreaker.exs  n_queens.exs  one_max.exs  one_max_interactive.exs  portfolio.exs  schedule.exs  speller.exs  tetris.exs  tiger_simulation.exs
genetic/src/: genetic.c
minesweeper/: Cell.ts  CellDisplay.ts  CellUI.tsx  Game.ts  GameUI.tsx  MinesweeperUI.tsx  Timer.ts
pygames/: README.md  pyproject.toml
react-store/: README.md  package-lock.json  package.json  tsconfig.json
reftable/: README.md  package-lock.json  package.json
rip/: Cargo.toml  README.md  future.json  future.md
rip/src/: mac.rs  main.rs  ts.rs
textsearch/: text_search.md  ts_book.sql  ts_simple.sql
tractatus/: .gitignore  .gitlab-ci.yml  README.md  package.json  tsconfig.json
(+202 files in other folders)
