[package]
name = "rip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.1", features = ["cargo"] }
copypasta = "0.8.2"
directories = "5.0.0"
serde = {version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
predicates = "3.0.2"
